config/manifests/overlays/minikube-aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: demo-soa-backend
  namespace: demo-soa
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/catalog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-soa-catalog
            port:
              number: 8080
      - path: /api/orders(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-soa-orders
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: demo-soa-frontend
  namespace: demo-soa
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: demo-soa-frontend
            port:
              number: 8080
